# barcode-assign

./: .gitignore  Cargo.toml  bc-count.py  bc-trim.sh  run-test.sh
data/: CYH2.fa  bowtie-test.bam  pacbio-lib-specs-test.txt  pacbio-test-ccs.bam  pacbio-test-ccs.fastq  pacbio-test-frags-expected.fasta  pacbio-test-read-fates-expected.txt  pacbio-test-read-inserts-good-expected.txt  pacbio-test-read-matching-all-expected.txt  test-barcodes.fastq  test-bctrim.1.fq  test-bctrim.2.fq  test_R1_001.fastq  test_R2_001.fastq
src/: barcode_assign.rs  barcode_group.rs  bc_collapse.rs  bc_count.rs  bc_frag.rs  bc_grna.rs  bc_seqs.rs  bc_tabulate.rs  bc_umi.rs
src/barcode_assign/: assign.rs  barcode_group.rs  bc_collapse.rs  bc_count.rs  bc_frag.rs  bc_grna.rs  bc_seqs.rs  bc_tabulate.rs  bc_umi.rs  blasr.rs  collapse.rs  counts.rs  depth.rs  fastq_pair.rs  flank_match.rs  frag_purity.rs  lib.rs  neighborhood.rs  pacbio.rs  pacbio_extract.rs  pacbio_join.rs  pacbio_reads.rs  purity.rs  tabulate.rs
src/bc-align/: main.rs
src/bc-count/: main.rs
src/bc-grna/: assign.rs  depth.rs  main.rs  purity.rs
src/bc-pacbio/: bc-pbj.rs  bc-pbr.rs  bc_bam_chunk.rs  bc_pbj.rs  bc_pbr.rs  bc_pbx.rs
src/bc-pbr/: main.rs
src/bc-pileup/: aln_pos.rs  cov_stats.rs  main.rs  mutn.rs  offset_vector.rs
src/bc-seqs/: main.rs
