[package]
name = "barcode-assign"
version = "1.0.0"
authors = ["Nick Ingolia <ingolia@berkeley.edu>"]

[dependencies]
bio = "*"
rust-htslib = "*"
itertools = "*"
csv = "*"
clap = "*"
failure = "*"

[dev-dependencies]
tempfile = "*"
rand = "*"

[profile.dev]
opt-level = 3

[lib]
name = "barcode_assign"
path = "src/barcode_assign/lib.rs"

[[bin]]
name = "bc-seqs"
path = "src/bc_seqs.rs"

[[bin]]
name = "bc-align"
path = "src/bc-align/main.rs"

[[bin]]
name = "bc-pileup"
path = "src/bc-pileup/main.rs"

[[bin]]
name = "bc-count"
path = "src/bc_count.rs"

[[bin]]
name = "bc-grna"
path = "src/bc-grna/main.rs"

[[bin]]
name = "bc-frag"
path = "src/bc_frag.rs"

[[bin]]
name = "bc-pbr"
path = "src/bc-pacbio/bc_pbr.rs"

[[bin]]
name = "bc-pbj"
path = "src/bc-pacbio/bc_pbj.rs"

[[bin]]
name = "bc-bam-chunk"
path = "src/bc-pacbio/bc_bam_chunk.rs"

[[bin]]
name = "bc-tabulate"
path = "src/bc_tabulate.rs"

[[bin]]
name = "bc-collapse"
path = "src/bc_collapse.rs"
